--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,9 @@
 .mySlides {
   display: none;
 }
-
+.mySlides img{
+  width:40%
+}
 /* Next & previous buttons */
 .prev,
 .next {
@@ -152,6 +154,7 @@
   border-right: 1px solid #ccc;
   border-bottom: 1px solid #ccc;
 }
+
 .content {
   border-left: 1px solid #ccc;
   border-right: 1px solid #ccc;
@@ -164,9 +167,8 @@
 .formtk {
   line-height: 150%;
 }
-.formtk input[type="text"],
-.formtk input[type="password"],
-.formcontent input[type="text"] {
+
+input[type="text"],input[type="password"],input[type="email"]{
   width: 100%;
   border: 1px solid #ccc;
   padding: 10px;
@@ -185,14 +187,20 @@
   padding: 10px;
   border-radius: 5px;
 }
-.formtk input[type="submit"]:hover,
-.formcontent input[type="submit"]:hover,
-.formcontent input[type="reset"]:hover,
-.formcontent input[type="button"]:hover {
+input[type="submit"],input[type="reset"],input[type="button"]{
+  width: 200px;
+  border: 1px solid #ccc;
+  padding: 10px;
+  border-radius: 5px;
+  margin: 10px 10px 10px 0;
+  cursor: pointer;
+}
+input[type="submit"]:hover,input[type="reset"]:hover,input[type="button"]:hover{
   background-color: #060;
   transition: 0.5s;
   color: #ffffff;
 }
+
 .formtk li a {
   color: teal;
   text-decoration: none;
@@ -261,8 +269,14 @@
   text-align: center;
   color: teal;
 }
+.text{
+  background: rgba(0, 0, 0, 0.7);
+}
+.numbertext{
+  background: rgba(0, 0, 0, 0.7)
+}
 .top10 img {
-  width: 10%;
+  width: 20%;
   height: 50px;
   float: left;
   margin-right: 10px;
@@ -305,11 +319,11 @@ admin
   border: 1px solid #999;
 }
 .formds table th:nth-child(1) {
-  width: 10%;
+  width: 5%;
   background-color: teal;
 }
 .formds table th:nth-child(2) {
-  width: 30%;
+  width: 10%;
   background-color: tomato;
 }
 .formds table th:nth-child(3) {
@@ -320,9 +334,23 @@ admin
   width: 20%;
   background-color: teal;
 }
+.formds table th:nth-child(5) {
+  width: 20%;
+  background-color: tomato;
+}
+.formds table th:nth-child(6) {
+  width: 20%;
+  background-color: teal;
+}
+.formds table th:nth-child(7) {
+  width: 20%;
+  background-color: tomato;
+}
 .formds table td {
   padding: 10px 20px;
   border: 1px solid #999;
+  min-width: 150px;
+  text-align: center;
 }
 .box-sp img{
   max-width: 200px;
@@ -330,4 +358,13 @@ admin
 
 .content img{
   max-width: 200px;
+}
+
+#myChart{
+  position: absolute;
+  top: 25%;
+  left: 20%;
+  width:100%; 
+  max-width:1000px; 
+  height:500px;
 }
