--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,32 @@
   float: left;
   width: 100%;
 }
+.row li{
+  list-style: none;
+  
+}
+.spcl-item{
+  
+  border-bottom:2px solid greenyellow ;
+}
+.spcl-item a{
+  display: flex;
+  align-items: center;
+  margin: 30px 0;
+  text-decoration:none;
+}
+.spcl-item a img{
+  width: 80px;
+  margin: 0 10px;
+}
+.spcl-item span{
+  font-size: 15px;
+}
+.spcl-item p{
+  font-size: 10px;
+  text-decoration: none;
+  
+}
 .pt {
   padding-top: 30px;
 }
@@ -147,12 +173,29 @@
 .title {
   padding: 10px;
   color: #333;
-  background: #ccc;
+  background: rgb(113, 170, 113);
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
   border-left: 1px solid #ccc;
   border-right: 1px solid #ccc;
   border-bottom: 1px solid #ccc;
+  font-size: 20px;
+}
+.title-trangchu-admin button{
+font-size: 20px;
+padding: 10px 20px;
+background: rgb(113, 170, 113);
+border-radius: 10px;
+cursor: pointer;
+border: none;
+}
+.title-trangchu-admin h1{
+  font-size: 25px;
+text-decoration: underline;
+}
+.title-trangchu-admin button:hover{
+  color: white;
+  transition: 0.3s;
 }
 
 .content {
@@ -164,6 +207,24 @@
   min-height: 200px;
   padding: 20px;
 }
+.content_img{
+  text-align: center;
+  margin: 20px 0;
+}
+.content li {
+  margin-left: 50px;
+  font-size: 20px;
+  line-height: 40px;
+}
+.content p{
+  font-size: 20px;
+}
+.content li span{
+  font-size: 25px;
+  font-weight: 700;
+  color: green;
+}
+
 .formtk {
   line-height: 150%;
 }
@@ -182,13 +243,14 @@ input[type="text"],input[type="password"],input[type="email"]{
 .formcontent input[type="submit"],
 .formcontent input[type="reset"],
 .formcontent input[type="button"] {
-  width: 200px;
+  min-width: 200px;
   border: 1px solid #ccc;
   padding: 10px;
   border-radius: 5px;
 }
+h2{color: red;}
 input[type="submit"],input[type="reset"],input[type="button"]{
-  width: 200px;
+  min-width: 200px;
   border: 1px solid #ccc;
   padding: 10px;
   border-radius: 5px;
@@ -237,6 +299,16 @@ input[type="submit"]:hover,input[type="reset"]:hover,input[type="button"]:hover{
   padding: 15px 0;
   box-shadow: 10px 10px 10px 10px #eee;
 }
+.box-sp h3{
+  color: green;
+}
+.box-sp p {
+  color: #666;
+}
+.box-sp:hover img{
+  transform: scale(1.1);
+  transition: 0.5s ease-out;
+}
 .content2 {
   border-left: 1px solid #ccc;
   border-right: 1px solid #ccc;
@@ -253,7 +325,7 @@ input[type="submit"]:hover,input[type="reset"]:hover,input[type="button"]:hover{
   background-color: #fff;
   border-bottom: 1px solid #ccc;
 }
-.menudoc ul li a {
+.menudoc ul a {
   color: #666;
   text-decoration: none;
 }
